internal/backstage-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
